Se genera pantallas dashboard para clientes; se muestra historico de pedidos por cliente (solo cabeceras)

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -133,8 +133,8 @@
                         else if (ViewBag.User != null && ViewBag.User.IdRole == 1)
                         {
                             <li>
-                                <a href='@Url.Action("OrdersClient", "Dashboard")'>
-                                    <i data-feather="clipboard"></i> <span>Mis Pedidos</span>
+                                <a href='@Url.Action("History", "Dashboard")'>
+                                    <i data-feather="clipboard"></i> <span>Historial Pedidos</span>
                                 </a>
                             </li>
                         }
