--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="~/css/responsive.css">
         <link href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/sweetalert2.min.css">
+        
 
         <!--fontawesome-all.min.js-->
         <script src="~/js/fontawesome-all.min.js"></script>
@@ -32,6 +33,8 @@
         const logout = () => {
             window.location.href = base_url;
         }
+
+        
     </script>
     @await Html.PartialAsync("_Preloader")
     <div id="wrapper">
@@ -74,7 +77,7 @@
                     <ul class="nav">
                         @if (ViewBag.User != null && ViewBag.User.IdRole == 4)
                         {
-                            <li >
+                            <li>
                                 <a href='@Url.Action("Index", "Dashboard")'>
                                     <i data-feather="home"></i> <span>Dashboard</span>
                                 </a>
@@ -132,9 +135,14 @@
                         }
                         else if (ViewBag.User != null && ViewBag.User.IdRole == 1)
                         {
+                            @*<li>
+                                <a href='@Url.Action("History", "Dashboard")' id="historyAction">
+                                    <i data-feather="clipboard"></i> <span>Mis Pedidos</span>
+                                </a>
+                            </li>*@
                             <li>
-                                <a href='@Url.Action("History", "Dashboard")'>
-                                    <i data-feather="clipboard"></i> <span>Historial Pedidos</span>
+                                <a id="misdatosAction" href="">
+                                    <i data-feather="user"></i> <span>Mis Datos</span>
                                 </a>
                             </li>
                         }
@@ -196,5 +204,13 @@
     <!--Custom JS-->
     <script src="~/js/custom.js"></script>
     @RenderSection("Scripts", required: false)
+    @*<script>
+        $(document).ready(function () {
+            $('body').on("click", 'a#misdatosAction', function () {
+                console.log('MISDATOSACTION');
+                $(this).attr('href', base_url + "/Customer/Edit?key=" + idCustomer);
+            });
+        });
+    </script>*@
 </body>
 </html>
