Se implementa nuevo modo de autenticacion de gmail; se cambia urls de produccion; se corrige pantalla de nueva venta al consulta el cliente;

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Customer/Edit.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Customer/Edit.cshtml
@@ -298,7 +298,7 @@
                 let resp = response;
 
                 if (resp.code === '000') {
-                    Swal.fire('Notificación', 'Tus datos se han actualizado.', 'error');
+                    Swal.fire('Notificación', 'Tus datos se han actualizado.', 'success');
                 }
                 else {
                     Swal.fire('Notificación', 'Lo sentimos, no se pudo completar la solicitud.', 'error');
