--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -27,8 +27,8 @@
 </head>
 <body>
     <script>
-        //var base_url = 'http://localhost/Pesca/';
-        var base_url = 'http://localhost:12681/';
+        var base_url = 'http://localhost/Pesca/';
+        //var base_url = 'http://localhost:12681/';
         
         const logout = () => {
             window.location.href = base_url;
