--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -19,8 +19,8 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
 
     <script>
-        //var base_url = 'http://localhost/Pesca';
-        var base_url = 'http://localhost:12681';
+        var base_url = 'http://localhost/Pesca';
+        //var base_url = 'http://localhost:12681';
     </script>
     @RenderSection("HeaderScript", required: false)
 </head>
