Se remueve el api key de maps; se agregan capturas de pantalla

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Customer/Edit.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Customer/Edit.cshtml
@@ -210,7 +210,7 @@
 @section Scripts{
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3imid37BAw2_Uwsw59RjLw8DRJuGCbEc&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY">
     </script>
 
     @*<script src="~/aspnet/signalr/dist/browser/signalr.min.js"></script>
